--- a/cfgs/medal.yaml
+++ b/cfgs/medal.yaml
@@ -14,7 +14,7 @@ save_snapshot: false
 # misc
 seed: 2
 device: cuda
-save_video: false
+save_video: true
 save_train_video: false
 use_tb: true
 replay_buffer_num_workers: 4
